[gd_scene load_steps=2 format=3 uid="uid://save_load_ui"]

[ext_resource type="Script" path="res://scenes/ui/save_load_ui.gd" id="1"]

[node name="SaveLoadUI" type="CanvasLayer"]
layer = 20
process_mode = 3
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.75)

[node name="Content" type="MarginContainer" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="MainPanel" type="PanelContainer" parent="Root/Content"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Root/Content/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Root/Content/MainPanel/VBox"]
layout_mode = 2
text = "SAVE GAME"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Root/Content/MainPanel/VBox"]
layout_mode = 2

[node name="SlotsScroll" type="ScrollContainer" parent="Root/Content/MainPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlotsContainer" type="VBoxContainer" parent="Root/Content/MainPanel/VBox/SlotsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Separator2" type="HSeparator" parent="Root/Content/MainPanel/VBox"]
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="Root/Content/MainPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BackBtn" type="Button" parent="Root/Content/MainPanel/VBox/BottomBar"]
layout_mode = 2
text = "BACK"

[node name="DeleteBtn" type="Button" parent="Root/Content/MainPanel/VBox/BottomBar"]
layout_mode = 2
text = "DELETE SAVE"

[node name="Spacer" type="Control" parent="Root/Content/MainPanel/VBox/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionBtn" type="Button" parent="Root/Content/MainPanel/VBox/BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "LOAD"

[node name="ConfirmOverlay" type="ColorRect" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="ConfirmDialog" type="PanelContainer" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Root/ConfirmDialog"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="ConfirmLabel" type="Label" parent="Root/ConfirmDialog/VBox"]
layout_mode = 2
text = "Are you sure?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonBar" type="HBoxContainer" parent="Root/ConfirmDialog/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="ConfirmYes" type="Button" parent="Root/ConfirmDialog/VBox/ButtonBar"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "YES"

[node name="ConfirmNo" type="Button" parent="Root/ConfirmDialog/VBox/ButtonBar"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
text = "NO"
